fixed container on mobile

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -57,7 +57,7 @@ aside {
     margin-top: 90px;
   }
   @media (max-width: 1040px) {
-    width: 94%;
+    width: 100%;
   }
   @media (max-width:860px) {
     .featured {
@@ -65,7 +65,10 @@ aside {
     }
   }
 }
-
+.page-template .customcontainer {
+    width: 94%;
+    margin: 0 auto;
+}
 .customcontainer {
   display: flex;
   justify-content: space-between;
