--- a/src/sass/_post.scss
+++ b/src/sass/_post.scss
@@ -366,12 +366,6 @@ aside .author_widget {
 
 .page-template .container {
   margin: 40px auto;
-  @media (max-width:1040px) {
-    margin: 40px 20px 20px;
-  }
-  @media (max-width:600px) {
-    margin: 30px 15px 15px;
-  }
 }
 
 .tags {
