--- a/src/sass/_postlist.scss
+++ b/src/sass/_postlist.scss
@@ -50,6 +50,8 @@
   }
   @media (max-width: 1040px) {
     display: block;
+    width: 94%;
+    margin: 0 auto;
 
     article {
       .largeimage {
